# rocket-api-template

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
src/: main.rs  tests.rs
src/api/: errors.rs  mod.rs
src/api/hello_world/: mod.rs
